# zte-agentic-soc

./: .env.example  .gitignore  DATASET-IMPLEMENTATION-GUIDANCE.md  MOCK-DATA-ANALYSIS.md  README.md  pyproject.toml  requirements.txt  test_agent_api.py  test_agent_deployment.py
.github/agents/: architect.agent.md  data-scientist.agent.md  project-judge-reviewer.agent.md  python-developer.md  security-engineer.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  technical-content-reviewer.agent.md
.github/prompts/: data-scientist.prompt.md
.github/reference-material/: agentic-security-architecture-hypothesis.md  agentic-soc-research.md  traditional-soc-research.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
agents/: README.md  alert-triage-agent.yaml
docs/: AGENT-FRAMEWORK-IMPLEMENTATION.md  DEPLOYMENT_VERIFICATION.md  FOUNDRY-NATIVE-AGENTS-MVP-GUIDE.md  FOUNDRY-NATIVE-AGENTS-REFACTOR-PLAN.md  FRAMEWORK-MIGRATION-SUMMARY.md  MVP-IMPLEMENTATION-SUMMARY.md  REFACTOR-PLAN-DECLARATIVE-AGENTS.md  REFACTOR-SUMMARY.md  REFACTORING-COMPLETE.md
examples/: foundry_native_agents_demo.py
infra/: README.md  main.bicep
infra/modules/: ai-foundry.bicep  ai-search.bicep  container-apps.bicep  cosmos.bicep  event-hubs.bicep  microsoft-foundry.bicep  monitoring.bicep
infra/parameters/: dev.parameters.json  prod.parameters.json
mock-data/: README.md
schemas/: README.md
schemas/agents/: alert-triage-agent-input.schema.json  alert-triage-agent-output.schema.json  incident-response-agent-input.schema.json  incident-response-agent-output.schema.json  threat-hunting-agent-input.schema.json  threat-hunting-agent-output.schema.json  threat-intelligence-agent-input.schema.json  threat-intelligence-agent-output.schema.json
schemas/events/: alert-ingestion-event.schema.json  hunt-trigger-event.schema.json  response-complete-event.schema.json  triage-complete-event.schema.json
specs/001-agentic-soc/: AgenticSOC_Architecture.md  CLARIFICATION-QUESTIONS.md  CLARIFICATION-SECOND-PASS.md  JUDGE-REVIEW.md  MODEL-SELECTION-AOA.md  PHASE-4-IMPLEMENTATION-SUMMARY.md  PHASE-COMPLETION-SUMMARY.md  PRE-IMPLEMENTATION-TODO.md  THREAT-MODEL.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agentic-soc/checklists/: requirements.md
specs/001-agentic-soc/contracts/: alert-triage-input.schema.json  alert-triage-instructions.md  alert-triage-output.schema.json  orchestrator-api.yaml
specs/001-agentic-soc/dataset-analysis/: README.md  attack-dataset-analysis.md  guide-dataset-analysis.md  implementation-guidance.md
specs/001-agentic-soc/reviews-and-notes/: ARCHITECTURE-SUMMARY.md  CLARIFICATION-ANALYSIS.md  CLARIFICATION-README.md
src/agents/: __init__.py  alert_triage_agent.py  alert_triage_agent_v2.py  foundry_agent_loader.py  foundry_native_agent.py
src/agents/alert_triage/: agent.py  agent_framework.py
src/agents/definitions/: alert_triage_agent.yaml
src/api/: main.py
src/data/: cosmos.py  datasets.py  scenarios.py  streaming.py
src/demo/: cli.py  main.py
src/demo/scenarios/: __init__.py  scenario_01_alert_triage.py
src/deployment/: deploy_agents.py
src/deployment/agent_definitions/: manager_instructions.md
src/mock/: defender_mock.py  sentinel_mock.py  stream.py
src/orchestration/: event_handlers.py  orchestrator.py  workflows.py
src/shared/: audit.py  auth.py  logging.py  metrics.py  models.py  schemas.py
tests/unit/: test_alert_triage_agent_v2.py  test_foundry_agent_loader.py  test_foundry_native_agent.py
utils/: analyze_mock_data.py  demo_agent_framework.py  demo_alert_triage.py  demo_foundry_agent.py  deploy_infrastructure.sh  setup_ai_search.py  setup_cosmos_db.py  split_csv.py
